# candy-shop

./: README.md  main.py  pyproject.toml
src/: model.py
tests/: test_model.py
